# BLADE

./: BLADE.ipynb  BLADE.py  README.md  pyproject.toml
Blade.egg-info/: SOURCES 3.txt
examples/: oxide_tdb_gen.py  oxides.py  tdb_gen.py
src/Blade.egg-info/: PKG-INFO  SOURCES.txt
src/blade/: blade_compositions.py  blade_phase_diagram.py  blade_sqs.py  blade_sqs_fit.py  blade_tdb_gen.py  blade_visual.py
